--- a/progress/snippets/header.liquid
+++ b/progress/snippets/header.liquid
@@ -1,6 +1,6 @@
 <header>
   <!--------------- Header Top ---------------->
-  <section class="header-top padding-top-10 padding-bottom-10">
+  <section class="header-1 padding-top-10 padding-bottom-10">
     <div class="container">
       <div class="row">
         {% if settings.enable_header_social_link %}
