--- a/progress/snippets/footer.liquid
+++ b/progress/snippets/footer.liquid
@@ -1,6 +1,6 @@
 <footer class="footer">
   <!--------------- Footer Top ---------------->
-  <section class="footer-top">
+  <section class="footer-1">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-sm-6 col-xs-12">
@@ -54,7 +54,7 @@
     </div>
   </section>
   <!--------------- Footer Middle ---------------->
-  <section class="footer-middle">
+  <section class="footer-2">
     <div class="container">
       <div class="row">
         {% if settings.enable_footer_description %}
@@ -103,7 +103,7 @@
     </div>
   </section>
   <!--------------- Footer Bottom ---------------->
-  <section class="footer-bottom">
+  <section class="footer-3">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-sm-6 col-xs-12">
