--- a/progress/snippets/header.liquid
+++ b/progress/snippets/header.liquid
@@ -68,7 +68,7 @@
     </div>
   </section>
   <!--------------- Header Middle ---------------->
-  <section class="header-middle">
+  <section class="header-2">
     <div class="container">
       <div class="row">
         {% if settings.enable_site_logo %}
@@ -91,7 +91,7 @@
     </div>
   </section>
   <!--------------- Header Bottom ---------------->
-  <section class="header-bottom">
+  <section class="header-3">
     <div class="container">
       <div class="row">
         <!--------------- Navigation ---------------->
