--- a/progress/templates/list-collections.liquid
+++ b/progress/templates/list-collections.liquid
@@ -15,6 +15,7 @@
                         </div>
                         {% endif %}
                         <h3 class="margin-bottom-20"><a href="{{collection.url}}">{{ collection.title }}</a></h3>
+                        <p>{{ collection.products_count }} Products</p>
                         <div class="collection-description margin-bottom-20">
                             <p>{{collection.description | truncate: 130}}</p>
                         </div>
