--- a/progress/snippets/search-result.liquid
+++ b/progress/snippets/search-result.liquid
@@ -7,7 +7,7 @@
             {% assign image_alt = item.title | escape %}
             <a  href="{{ item.url }}" title="{{ image_alt  }}">
                 <div class="product-overlay"></div>
-                <img src="{{ item | img_url: 'medium' }}" class="img-responsive center-block" alt="{{image_alt}}" />
+                <img src="{{ item | img_url: 'grande' }}" class="img-responsive center-block" alt="{{image_alt}}" />
             </a>
             {% endif %}
         </div>
@@ -29,7 +29,7 @@
     {% endif %}
     </h3>
     {% endif %}
-    <p class="margin-bottom-20">{{ item.content | strip_html | truncatewords: 20 }}</p>
+    <p class="margin-bottom-20">{{ item.content | strip_html | truncatewords: 30 }}</p>
     <div class="product-button">
         <a href="{{ item.url }}" class="btn btn-default text-uppercase">Add to cart</a>
     </div>
