--- a/progress/templates/search.liquid
+++ b/progress/templates/search.liquid
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="row">
                 {% if search.performed %}
-                {% paginate search.results by 10 %}
+                {% paginate search.results by 5 %}
                 {% if search.results_count == 0 %}
                 <div class="col-md-12 text-center">
                     <h2 class="page-header">{{ 'general.search.no_results_html' | t: terms: search.terms }}</h2>
@@ -26,7 +26,41 @@
                 </div>
                 {% endfor %}
                 {% endif %}
+                {% if paginate.pages > 1 %}
+                <div class="col-md-12 col-sm-12 col-xs-12 pagination-wrap margin-to-30 text-center">
+                    <!--------------- pagination ---------------->
+                    <ul class="list-inline pagination">
+                        {% if paginate.previous %}
+                        <li class="display-inline-b"><a href="{{paginate.previous.url}}" class="next-previous"><i class="fa fa-angle-left"></i></a></li>
+                        {% else %}
+                        <li class="disabled display-inline-b"><a><i class="fa fa-angle-left"></i></a></li>
+                        {% endif %}
+                        {% for part in paginate.parts %}
+                        {% if part.is_link %}
+                        <li class="display-inline-b"><a href="{{part.url}}"><span>{{ part.title }}</span></a></li>
+                        {% else %}
+                        <li class="active display-inline-b"><span>{{ part.title }}</span></li>
+                        {% endif %}
+                        {% endfor %}
+                        {% if paginate.next %}
+                        <li class="display-inline-b"><a href="{{paginate.next.url}}" class="prev-paginate"><i class=" fa fa-angle-right"></i></a></li>
+                        {% else %}
+                        <li class="display-inline-b"><a><i class=" fa fa-angle-right"></i></a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+                {% endif %}
                 {% endpaginate %}
+                {% else %}
+                <div class="col-md-12 text-center">
+                    <h2 class="page-header">{{ 'general.search.title' | t }}</h2>
+                    <form class="navbar-form search-form margin-to-30" action="/search">
+                        <div class="form-group">
+                            <input type="text" name="q" class="form-control" placeholder="Search... " value="">
+                        </div>
+                        <button type="submit" class="btn btn-default btn-lg"><i class="fa fa-search"></i> Search</button>
+                    </form>
+                </div>
                 {% endif %}
             </div>
         </div>
